--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^1.0.3",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "firebase": "^8.8.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
