--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "firebase": "^8.8.1",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sweetalert2": "^11.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
